update index file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <h1>Welcome to The Daily Grocery Shop</h1>
+        <h1>Welcome! to The Daily Grocery Shop</h1>
         <nav>
             <ul>
                 <li>
